--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,5 +9,6 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v3
         with:
+          token: ${{ secrets.RELEASE_GH_TOKEN }}
           release-type: maven
           package-name: com.redhat.cloud.event.event-schemas
