chore(main): release 1.0.2-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redhat.cloud.event</groupId>
   <artifactId>event-schemas</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <properties>
     <java.release>11</java.release>
