--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           release-type: maven
           package-name: com.redhat.cloud.event.event-schemas
+          skip-snapshot: true
   publish:
     needs: [ release ]
     runs-on: ubuntu-latest
