--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,6 @@ jobs:
         with:
           release-type: maven
           package-name: com.redhat.cloud.event.event-schemas
-          skip-snapshot: true
   publish:
     needs: [ release ]
     runs-on: ubuntu-latest
@@ -26,7 +25,7 @@ jobs:
         with:
           java-version: 11
           distribution: adopt
-          server-id: jboss.releases
+          server-id: jboss.staging
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Publish package
