--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -21,5 +21,5 @@ jobs:
             git add .
             git config --global user.name ${{ github.actor }}
             git config --global user.email '${{ github.actor }}@users.noreply.github.com'
-            git commit -a -m 'Regenerate types' && git push
+            git commit -a -m 'fix: Regenerate types' && git push
           fi
