--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.target>${java.release}</maven.compiler.target>
     <maven.compiler.source>${java.release}</maven.compiler.source>
+    <junit.version>5.9.2</junit.version>
   </properties>
 
   <licenses>
@@ -63,6 +64,14 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <distributionManagement>
