--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.networknt</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>1.0.79</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
