--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,20 +9,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Prepare cache key
-        id: cache-key
-        shell: bash
-        run: echo "::set-output name=date::$(/bin/date -u "+%Y-%m")"
-      - name: Cache Maven dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          # The cache key is changed every month to prevent unlimited growth.
-          key: maven-cache-${{ steps.cache-key.outputs.date }}
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: adopt
           java-version: 17
+          cache: maven
       - name: Build with Maven
         run: ./mvnw clean verify --no-transfer-progress
