--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,9 @@ jobs:
       - name: Set up Maven Central Repository
         uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: 17
           distribution: adopt
+          cache: 'maven'
           server-id: jboss.staging
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
