chore: commit code generation from github bot instead of user account  only if the build succeeds

--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -16,10 +16,21 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm run generate
-      - run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            git add .
-            git config --global user.name ${{ github.actor }}
-            git config --global user.email '${{ github.actor }}@users.noreply.github.com'
-            git commit -a -m 'fix: Regenerate types' && git push
-          fi
+      - name: Check if there are changes
+        id: changes
+        uses: UnicornGlobal/has-changes-action@v1.0.11
+      - name: Set up Maven Central Repository
+        if: steps.changes.outputs.changed == 1
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: adopt
+          cache: 'maven'
+      - name: Build with Maven
+        if: steps.changes.outputs.changed == 1
+        run: ./mvnw clean verify --no-transfer-progress
+      - uses: EndBug/add-and-commit@v9
+        if: steps.changes.outputs.changed == 1
+        with:
+          default_author: github_actions
+          message: "fix: Regenerate types"
