--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -18,19 +18,19 @@ jobs:
       - run: npm run generate
       - name: Check if there are changes
         id: changes
-        uses: UnicornGlobal/has-changes-action@v1.0.11
+        run: echo "changed=$(git status --porcelain | wc -l)" >> $GITHUB_OUTPUT
       - name: Set up Maven Central Repository
-        if: steps.changes.outputs.changed == 1
+        if: steps.changes.outputs.changed != 0
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: adopt
           cache: 'maven'
       - name: Build with Maven
-        if: steps.changes.outputs.changed == 1
+        if: steps.changes.outputs.changed != 0
         run: ./mvnw clean verify --no-transfer-progress
       - uses: EndBug/add-and-commit@v9
-        if: steps.changes.outputs.changed == 1
+        if: steps.changes.outputs.changed != 0
         with:
           default_author: github_actions
           message: "fix: Regenerate types"
