chore: update dependabot config to include fix prefix

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: fix
+      prefix-development: build
+      include: "scope"
 
   # for quicktype updates
   - package-ecosystem: "npm"
@@ -18,3 +22,5 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      prefix: fix
+      include: "scope"
