chore: fix dependabot file

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,5 +22,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
       prefix: fix
       include: "scope"
