--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           release-type: maven
           package-name: com.redhat.cloud.event.event-schemas
+          extra-files:
+            - README.md
   auto-merge-snapshot:
     needs: [ release ]
     runs-on: ubuntu-latest
